--- a/A1/Readme
+++ b/A1/Readme
@@ -1,1 +1,10 @@
+Assignment 1
+
+LOS:
+- Handle macroeconomic data
+- perform transformations
+- apply univariate models (Given AR - skip the choosing model step)
+- predict key economic indicators
+- evaluate these forecasts
+
 
